--- a/src/main/webapp/private/administrativo/ppa/form.xhtml
+++ b/src/main/webapp/private/administrativo/ppa/form.xhtml
@@ -53,6 +53,12 @@
 								</div>
 							</div>
 						 
+							<div class="row" style="margin-top: 1%">	
+								<div class="col-lg-1">
+									<h:outputText value="VIGENTE:  " styleClass="labelOutText"/>
+									<p:selectBooleanCheckbox value="#{ppaFormMBean.ppa.vigente}" />
+								</div>
+							</div>						 
 						
 						<div class="row-fluid" style="margin-top: 2%;">
 							<div class="spaceBtnAcao">					
