Relatorio fisico financeiro

--- a/src/main/webapp/private/quantitativo/fisicofinanceiro/anual/form.xhtml
+++ b/src/main/webapp/private/quantitativo/fisicofinanceiro/anual/form.xhtml
@@ -37,7 +37,7 @@
 						<div class="row" style="margin-top: 1%;">
 							<div class="col-lg-6">
 								<h:outputText styleClass="labelOutText" value="ORGÃO: " />
-								<h:outputText value="#{fisicoFinanceiroAnualFormMBean.acao.orgao.codigo} - #{fn:toUpperCase(fisicoFinanceiroAnualFormMBean.acao.orgao.descricao)}" styleClass="labelInputText" />
+								<h:outputText value="#{fisicoFinanceiroAnualFormMBean.acao.orgao.unidadeOrcamentaria.codigo} - #{fn:toUpperCase(fisicoFinanceiroAnualFormMBean.acao.unidadeOrcamentaria.orgao.descricao)}" styleClass="labelInputText" />
 							</div>
 						</div>
 						<div class="row" style="margin-top: 1%;">
