--- a/src/main/webapp/private/avaliacao/setorialPrograma/fisicoFinanceiro.xhtml
+++ b/src/main/webapp/private/avaliacao/setorialPrograma/fisicoFinanceiro.xhtml
@@ -57,7 +57,7 @@
 									<th>(G/E) = H</th>
 									<th>Eficiência (C/H)</th>
 								</tr>
-								<ui:repeat value="#{avaliacaoProgramaFisicoFinanceiroMBean.listAvalFisicoFinanceira}" var="aff">
+								<ui:repeat value="#{avaliacaoProgramaFisicoFinanceiroMBean.listFisicoFinanceiroMensalSiafem}" var="aff">
 									<tr>
 										<td>
 											<h:outputText value="#{aff.unidadeOrcamentaria}"/>
@@ -66,7 +66,7 @@
 											<h:outputText value="#{aff.acao}"/> 
 										</td>
 										<td>
-											<h:outputText value="#{aff.produto}"/>
+											<h:outputText value="#{aff.acaoProduto}"/>
 										</td>
 										<td>
 											<h:outputText value="#{aff.unidadeMedida}"/>
@@ -161,9 +161,8 @@
 		    				</div>		    			
 		    			</ui:repeat> 			
 		    			
-		    			
 		    			<div class="row" style="margin-top: 2%;">
-		    				<h:commandButton styleClass="btn btn-primary" value="Enviar" action="#{avaliacaoProgramaFisicoFinanceiroMBean.adicionaAvaliacaoFisicoFinanceira()}"/>
+		    				<h:commandButton styleClass="btn btn-primary" value="Enviar" action="#{avaliacaoProgramaFisicoFinanceiroMBean.adicionarAvaliacaoFisicoFinanceira()}"/>
 		    				&nbsp;
 		    				<h:button styleClass="btn btn-default" value="Voltar"  outcome="avaliacaoSetorialProgramaList" />
 		    			</div>
