Fiz o grafico da home e terminei a tela de link

--- a/src/main/webapp/private/administrativo/link/list.xhtml
+++ b/src/main/webapp/private/administrativo/link/list.xhtml
@@ -69,7 +69,7 @@
 							<h:outputText value="#{fn:toUpperCase(link.titulo)}" />
 						</p:column>
 						<p:column headerText="URL" styleClass="outTextTable">
-							<h:outputText value="#{fn:toUpperCase(link.url)}" />
+							<h:outputText value="#{link.url}" />
 						</p:column>
 												
 						<p:column headerText="OPERAÇÃO" style="width: 12%;" styleClass="outTextTable"
