RELATÓRIO RESUMIDO FÍSICO FINANCEIRO POR PROGRAMA e doube to bigDecimal

--- a/src/main/webapp/private/relatorio/metafisicofinanceiro/list.xhtml
+++ b/src/main/webapp/private/relatorio/metafisicofinanceiro/list.xhtml
@@ -42,7 +42,7 @@
 		    			<div class="row" style="margin-top: 1%;">
 							<div class="col-lg-3">
 								<h:outputText value="EXERCÍCIO: " styleClass="labelOutText"/>
-								<h:outputText value="#{exercicioMBean.exercicio.ano}" styleClass="labelInputText"/>
+								<h:outputText value="#{relatorioMetaFisicoFinanceiroMBean.exercicio.ano}" styleClass="labelInputText"/>
 							</div>					
 						</div>
 						
