--- a/src/main/webapp/private/relatorio/relatoriofinanceiroacao/list.xhtml
+++ b/src/main/webapp/private/relatorio/relatoriofinanceiroacao/list.xhtml
@@ -43,7 +43,7 @@
 						<div class="row" style="margin-top: 1%;">
 							<div class="col-lg-3">
 								<h:outputText value="EXERCÍCIO: " styleClass="labelOutText"/>
-								<h:outputText value="#{exercicioMBean.exercicio.ano}" styleClass="labelInputText"/>
+								<h:outputText value="#{relatorioDespesaExecutadaAcaoMBean.exercicio.ano}" styleClass="labelInputText"/>
 							</div>					
 						</div>
 		    			
