--- a/src/main/webapp/private/relatorio/menu.xhtml
+++ b/src/main/webapp/private/relatorio/menu.xhtml
@@ -22,9 +22,7 @@
 					<div class="col-lg-3">
 						<h:outputText value="SELECIONE UM PPA:  " styleClass="labelOutText"/>					
 						<h:selectOneMenu value="#{menuRelatorioMBean.ppaId}" styleClass="input-sm form-control" >
-							<f:selectItem itemValue="#{null}" itemLabel="--SELECIONE--" />
-							<f:selectItems var="ppa" value="#{menuRelatorioMBean.listPpa}"
-								itemValue="#{ppa.id}" itemLabel="#{ppa.descricao}"/>
+							<f:selectItems var="ppa" value="#{menuRelatorioMBean.listPpa}" itemValue="#{ppa.id}" itemLabel="#{ppa.descricao}"/>
 							<p:ajax execute="@this" event="change" listener="#{menuRelatorioMBean.onChangePpa}" update="select_exercicio"/>	
 						</h:selectOneMenu>
 					</div>				
