--- a/src/main/webapp/private/avaliacao/setorialPrograma/diretrizAssociada.xhtml
+++ b/src/main/webapp/private/avaliacao/setorialPrograma/diretrizAssociada.xhtml
@@ -32,7 +32,7 @@
 
 						<sispca:dadosIdentificacaoPrograma programa="#{avaliacaoProgramaDiretrizAssociadaMBean.programa}"
 														   dotacaoInicial="#{avaliacaoProgramaDiretrizAssociadaMBean.dotacaoInicial}"
-														   dotAtual="#{avaliacaoProgramaDiretrizAssociadaMBean.dotacaoAtual}"
+														   dotacaoAtual="#{avaliacaoProgramaDiretrizAssociadaMBean.dotacaoAtual}"
 														   variacao="#{avaliacaoProgramaDiretrizAssociadaMBean.variacao}"	 />
 						
 						
