--- a/src/main/webapp/private/avaliacao/setorialPrograma/painelAssociado.xhtml
+++ b/src/main/webapp/private/avaliacao/setorialPrograma/painelAssociado.xhtml
@@ -31,7 +31,7 @@
 						
 						<sispca:dadosIdentificacaoPrograma programa="#{avaliacaoProgramaPainelAssociadaMBean.programa}"
 														   dotacaoInicial="#{avaliacaoProgramaPainelAssociadaMBean.dotacaoInicial}"
-														   dotAtual="#{avaliacaoProgramaPainelAssociadaMBean.dotacaoAtual}"
+														   dotacaoAtual="#{avaliacaoProgramaPainelAssociadaMBean.dotacaoAtual}"
 														   variacao="#{avaliacaoProgramaPainelAssociadaMBean.variacao}"	 />
 
 
