--- a/src/main/webapp/private/avaliacao/setorialPrograma/recomendacao.xhtml
+++ b/src/main/webapp/private/avaliacao/setorialPrograma/recomendacao.xhtml
@@ -31,7 +31,7 @@
 						
 		    			<sispca:dadosIdentificacaoPrograma programa="#{avaliacaoProgramaRecomendacaoMBean.programa}"
 														   dotacaoInicial="#{avaliacaoProgramaRecomendacaoMBean.dotacaoInicial}"
-														   dotAtual="#{avaliacaoProgramaRecomendacaoMBean.dotacaoAtual}"
+														   dotacaoAtual="#{avaliacaoProgramaRecomendacaoMBean.dotacaoAtual}"
 														   variacao="#{avaliacaoProgramaRecomendacaoMBean.variacao}"	 />
 
 
