--- a/src/main/webapp/private/avaliacao/setorialPrograma/resultado.xhtml
+++ b/src/main/webapp/private/avaliacao/setorialPrograma/resultado.xhtml
@@ -36,7 +36,7 @@
 						
 		    			<sispca:dadosIdentificacaoPrograma programa="#{avaliacaoProgramaResultadoMBean.programa}"
 														   dotacaoInicial="#{avaliacaoProgramaResultadoMBean.dotacaoInicial}"
-														   dotAtual="#{avaliacaoProgramaResultadoMBean.dotacaoAtual}"
+														   dotacaoAtual="#{avaliacaoProgramaResultadoMBean.dotacaoAtual}"
 														   variacao="#{avaliacaoProgramaResultadoMBean.variacao}"	 />
 
 		    			
