--- a/src/main/webapp/private/avaliacao/setorialPrograma/fisicoFinanceiro.xhtml
+++ b/src/main/webapp/private/avaliacao/setorialPrograma/fisicoFinanceiro.xhtml
@@ -31,7 +31,7 @@
 		
 						<sispca:dadosIdentificacaoPrograma programa="#{avaliacaoProgramaFisicoFinanceiroMBean.programa}"
 														   dotacaoInicial="#{avaliacaoProgramaFisicoFinanceiroMBean.dotacaoInicial}"
-														   dotAtual="#{avaliacaoProgramaFisicoFinanceiroMBean.dotacaoAtual}"
+														   dotacaoAtual="#{avaliacaoProgramaFisicoFinanceiroMBean.dotacaoAtual}"
 														   variacao="#{avaliacaoProgramaFisicoFinanceiroMBean.variacao}"	 />
 		    			
 		    			<div class="row" style="margin-top: 2%;">
