--- a/src/main/webapp/private/relatorio/relatoriobi/view.xhtml
+++ b/src/main/webapp/private/relatorio/relatoriobi/view.xhtml
@@ -6,14 +6,19 @@
 	xmlns:p="http://primefaces.org/ui"
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
     xmlns:pe="http://primefaces.org/ui/extensions">
-<h:head></h:head>
+
 <body>
 	<ui:composition template="/template/template.xhtml">
 		<ui:define name="conteudo">	
-			<f:metadata>
-			</f:metadata>
+
+	  <h:form>
+	  
+				 <f:metadata>
+	    			<f:viewParam name="id" value="#{relatorioBiMBean.exercicioId}"/>
+	    			<f:viewAction action="#{relatorioBiMBean.init}" />
+			     </f:metadata>
 			
-			<h:form>
+		
 				<div class="container-fluid row-fluid">
 					
 
@@ -25,7 +30,7 @@
 						<div class="row">
 							<div class="col-lg-3">
 								<h:outputText value="RELATÓRIO:  " styleClass="labelOutText" />
-								<h:outputText value="${relatorioBiMBean.bi.descricao}" styleClass="labelInputText" />
+								<h:outputText value="#{relatorioBiMBean.bi.descricao}" styleClass="labelInputText" />
 							</div>
 							<!-- <div class="col-lg-3">
 								<h:outputText value="DATA:  " styleClass="labelOutText"/>
