--- a/src/main/webapp/resources/componentes/dadosIdentificacaoPrograma.xhtml
+++ b/src/main/webapp/resources/componentes/dadosIdentificacaoPrograma.xhtml
@@ -11,7 +11,7 @@
 	 <composite:interface>
 			<composite:attribute name="programa" />
 			<composite:attribute name="dotacaoInicial" />
-			<composite:attribute name="dotAtual" />
+			<composite:attribute name="dotacaoAtual" />
 			<composite:attribute name="variacao" />
 	  </composite:interface>
 
@@ -88,7 +88,7 @@
 				</div>
 				<div class="col-lg-2">
 					<b><h:outputText value="Atual: "/></b>
-					<h:outputText value="#{cc.attrs.dotAtual}">
+					<h:outputText value="#{cc.attrs.dotacaoAtual}">
 						<f:convertNumber pattern="#,##0.00" />
 					</h:outputText>	
 				</div>
