--- a/src/main/webapp/private/avaliacao/setorialPrograma/list.xhtml
+++ b/src/main/webapp/private/avaliacao/setorialPrograma/list.xhtml
@@ -34,7 +34,7 @@
 									<br/>
 									<div class="span3">	 
 										<h:commandButton value="Imprimir" styleClass="btn btn-primary btnAction" 
-														 actionListener="#{avaliacaoProgramaMBean.imprimirTodos()}" onclick="this.form.target='_blank'" />
+														 actionListener="#{avaliacaoProgramaMBean.imprimirTodos()}"  />
 										 
 									</div>	
 								</div>
