botei o codigo nos combos

--- a/src/main/webapp/private/administrativo/usuario/form.xhtml
+++ b/src/main/webapp/private/administrativo/usuario/form.xhtml
@@ -116,7 +116,7 @@
 								<h:outputText value="UNIDADE ORÇAMENTÁRIA:" styleClass="labelOutText" />
 								<h:selectOneMenu value="#{usuarioFormMBean.usuario.unidadeOrcamentaria.id}"  required="true" requiredMessage="Unidade Orçamentário: campo é obrigatório" 
 											     styleClass="form-control input-sm" >
-									<f:selectItems value="#{usuarioFormMBean.listUnidadeOrcamentaria}" var="uo" itemLabel="#{fn:toUpperCase(uo.sigla)}" itemValue="#{uo.id}" />
+									<f:selectItems value="#{usuarioFormMBean.listUnidadeOrcamentaria}" var="uo" itemLabel="#{fn:toUpperCase(uo)}" itemValue="#{uo.id}" />
 								</h:selectOneMenu>
 							</div>
 						</div>
