--- a/src/main/webapp/private/qualitativo/acao/list.xhtml
+++ b/src/main/webapp/private/qualitativo/acao/list.xhtml
@@ -49,7 +49,7 @@
 										<div class="span3">
 											<h:selectOneMenu id="inputMenUnidOrc" value="#{acaoListMBean.unidadeOrcamentariaId}"  styleClass="form-control input-sm" >
 												<f:selectItem itemValue="#{null}" itemLabel="--SELECIONE--"/>
-												<f:selectItems value="#{acaoListMBean.listUnidadeOrcamentaria}" var="uo" itemValue="#{uo.id}" itemLabel="#{fn:toUpperCase(uo.descricao)}"/>
+												<f:selectItems value="#{acaoListMBean.listUnidadeOrcamentaria}" var="uo" itemValue="#{uo.id}" itemLabel="#{fn:toUpperCase(uo)}"/>
 											</h:selectOneMenu>											
 										</div>
 									</div>
