--- a/src/main/webapp/private/qualitativo/unidadegestora/edit.xhtml
+++ b/src/main/webapp/private/qualitativo/unidadegestora/edit.xhtml
@@ -51,7 +51,7 @@
 								<h:selectOneMenu value="#{unidadeGestoraEditMBean.unidadeGestora.unidadeOrcamentaria.id}"  styleClass="form-control input-sm"
 												 required="true" requiredMessage="Unidade Orçamentária: campo é obrigatório" >
 									<f:selectItem itemLabel="--SELECIONE--" itemValue="#{null}"/>
-									<f:selectItems value="#{unidadeGestoraEditMBean.listUnidadeOrcamentaria}" var="uo" itemValue="#{uo.id}" itemLabel="(#{uo.codigo}) - #{fn:toUpperCase(uo.descricao)}"/>
+									<f:selectItems value="#{unidadeGestoraEditMBean.listUnidadeOrcamentaria}" var="uo" itemValue="#{uo.id}" itemLabel="#{fn:toUpperCase(uo)}"/>
 								</h:selectOneMenu>
 							</div>						
 						</div>				
