--- a/src/main/webapp/private/relatorio/finalidadeacao/list.xhtml
+++ b/src/main/webapp/private/relatorio/finalidadeacao/list.xhtml
@@ -42,7 +42,7 @@
 							<h:outputText value="ÓRGÃO: " styleClass="labelOutText"/>
 							<h:selectOneMenu value="#{relatorioFinalidadeAcaoMBean.orgaoId}"  styleClass="form-control input-sm">
 								<f:selectItem itemValue="#{null}" itemLabel="--TODOS--"/>
-								<f:selectItems value="#{relatorioFinalidadeAcaoMBean.listOrgao}" var="org" itemValue="#{org.id}" itemLabel="#{fn:toUpperCase(org.descricao)}"/>
+								<f:selectItems value="#{relatorioFinalidadeAcaoMBean.listOrgao}" var="org" itemValue="#{org.id}" itemLabel="#{fn:toUpperCase(org)}"/>
 								<f:ajax execute="@this" event="change" listener="#{relatorioFinalidadeAcaoMBean.buscaUnidadeByOrgao()}" render="combo_unid_orc"/>	
 							</h:selectOneMenu>
 						</div>
@@ -54,7 +54,7 @@
 							<h:outputText value="UNIDADE ORÇAMENTÁRIA: " styleClass="labelOutText"/>
 							<h:selectOneMenu id="combo_unid_orc" value="#{relatorioFinalidadeAcaoMBean.unidadeOrcamentariaId}" styleClass="form-control input-sm">
 								<f:selectItem itemValue="#{null}" itemLabel="--TODAS--"/>
-								<f:selectItems value="#{relatorioFinalidadeAcaoMBean.listUnidadeOrcamentaria}" var="unid" itemValue="#{unid.id}" itemLabel="#{fn:toUpperCase(unid.descricao)}"/>
+								<f:selectItems value="#{relatorioFinalidadeAcaoMBean.listUnidadeOrcamentaria}" var="unid" itemValue="#{unid.id}" itemLabel="#{fn:toUpperCase(unid)}"/>
 								<f:ajax execute="@this" event="change" listener="#{relatorioFinalidadeAcaoMBean.buscaProgramaByUnidade()}" render="combo_prog"/>									
 							</h:selectOneMenu>
 						</div>
@@ -66,7 +66,7 @@
 							<h:outputText value="PROGRAMA: " styleClass="labelOutText"/>
 							<h:selectOneMenu id="combo_prog" value="#{relatorioFinalidadeAcaoMBean.programaId}" styleClass="form-control input-sm">
 								<f:selectItem itemValue="#{null}" itemLabel="--TODOS--"/>
-								<f:selectItems value="#{relatorioFinalidadeAcaoMBean.listPrograma}" var="prog" itemValue="#{prog.id}" itemLabel="#{fn:toUpperCase(prog.denominacao)}"/>
+								<f:selectItems value="#{relatorioFinalidadeAcaoMBean.listPrograma}" var="prog" itemValue="#{prog.id}" itemLabel="#{fn:toUpperCase(prog)}"/>
 							</h:selectOneMenu>
 						</div>
 					</div>	
@@ -76,7 +76,10 @@
 						
 							<h:commandButton value="Gerar Relatório" 
 								action="#{relatorioFinalidadeAcaoMBean.gerarRelatorio()}"
-								style="margin-left: 2%;" styleClass="btn btn-primary"/>
+								style="margin-left: 2%;" styleClass="btnAction btn btn-primary"/>
+								
+							&nbsp;	
+							<h:button styleClass="btnAction btn btn-primary" style="margin-left: 0px" value="Voltar" outcome="relatorioList" immediate="true" />		
 					</div>
 				</div>	
 			</h:form>
